--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
     <h3 class="block-title">Register Form</h3>
     <form id="register-form" class="validation-wrapper">
       <input type="email" name="email" placeholder="Email" class="validation-input"/>
-      <input type="password" name="password" value="password" class="validation-input"/>
+      <input name="password" class="validation-input"/>
       <button type="submit">Register</button>
     </form>
 
@@ -22,7 +22,7 @@
     <h3 class="block-title">Login Form</h3>
     <form id="login-form">
       <input type="email" name="email" placeholder="Email"/>
-      <input type="password" name="password" value="password" />
+      <input name="password" />
       <button type="submit">Login</button>
     </form>
 
